--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A web-based interface for Chinese Chess engines.",
   "main": "server.js",
   "scripts": {
+    "build": "chmod +x ./pikafish-sse41-popcnt",
     "start": "node server.js"
   },
   "dependencies": {
