--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "/server.js",
+      "src": "/api/websocket.js",
       "use": "@vercel/node",
       "config": {
         "experimental_allowQuery": true
@@ -11,8 +11,8 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/server.js"
+      "src": "/api/websocket",
+      "dest": "/api/websocket.js"
     }
   ]
 }
