--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "/api/websocket.js",
+      "src": "api/websocket.js",
       "use": "@vercel/node",
       "config": {
         "experimental_allowQuery": true
@@ -12,7 +12,7 @@
   "routes": [
     {
       "src": "/api/websocket",
-      "dest": "/api/websocket.js"
+      "dest": "api/websocket.js"
     }
   ]
 }
