--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,12 @@
 {
-  "version": 2
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/websocket.js",
+      "use": "@vercel/node",
+      "config": {
+        "experimental_allowQuery": true
+      }
+    }
+  ]
 }
