--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,6 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "api/websocket.js", "use": "@vercel/node" }
-  ],
-  "routes": [
-    {
-      "src": "/api/websocket",
-      "dest": "/api/websocket.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/public/$1"
-    }
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/api/websocket.js" }
   ]
 }
