--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "vercel-build": "chmod +x ./pikafish-sse41-popcnt",
     "start": "node api/websocket.js"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "ws": "^8.12.0"
