Rename project to Chinese chess

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xiangqi-interface",
+  "name": "Chinese chess",
   "version": "1.1.0",
   "description": "A web-based interface for Chinese Chess engines.",
   "author": "Augus <imlindora@gmail.com>",
@@ -17,7 +17,7 @@
     "electron-builder": "^24.9.1"
   },
   "build": {
-    "appId": "com.example.xiangqi-interface",
+    "appId": "com.example.Chinese chess",
     "productName": "中華象棋",
     "files": [
       "main.js",
